--- a/coursComplited.html
+++ b/coursComplited.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Curses web-page" />
-    <title>Курсы</title>
+    <title>Курс завершён</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
 
@@ -40,8 +40,9 @@
       </nav>
     </header>
     <main class="main">
-      <section class="breadcrumb">Хлебные крошки</section> 
-      <div class="wrapper"> <!-- Обёртка для того что бы флексануть колонки-->
+      <section class="breadcrumb">Хлебные крошки</section>
+      <!-- Обёртка для того что бы флексануть колонки-->
+      <div class="wrapper">
         <section class="video">Видео</section>
         <section class="content">Содержание</section>
       </div>
