--- a/index.html
+++ b/index.html
@@ -39,5 +39,94 @@
         </ul>
       </nav>
     </header>
+    <div class="content">
+      <div class="content__header">
+        <p class="content__title">Тест</p>
+        <p class="content__conditions">Посмотреть условия</p>
+      </div>
+      <div class="content__question">
+        <p class="content__question-text">
+          1. В каких случаях перспективно применение следовых кинологических
+          расчётов?
+        </p>
+        <ul class="content__answer-list">
+          <li class="content__answer-item">
+            <label for="first">
+              <input type="checkbox" id="first" class="content__invisible" />
+              <span class="content__checkbox"></span>
+              <span class="text"
+                >Оказание помощи гражданам, оказавшимся в зонах бедствия
+                или пропавшим в безлюдной местности</span
+              >
+            </label>
+          </li>
+          <li class="content__answer-item">
+            <label for="second">
+              <input type="checkbox" id="second" class="content__invisible" />
+              <span class="content__checkbox"></span>
+              <span class="text"
+                >Обучение животного идти как по горячему, так и по остывшему
+                следу</span
+              >
+            </label>
+          </li>
+          <li class="content__answer-item">
+            <label for="third">
+              <input type="checkbox" id="third" class="content__invisible" />
+              <span class="content__checkbox"></span>
+              <span class="text"
+                >Поиск тел и их остатков с применением специально обученных
+                собак</span
+              >
+            </label>
+          </li>
+        </ul>
+      </div>
+      <div class="content__divider"></div>
+      <div class="content__question">
+        <p class="content__question-text">
+          2. С какого возраста следует начинать дрессировку по курсу ПСС?
+        </p>
+        <ul class="content__answer-list">
+          <li class="content__answer-item">
+            <label for="six">
+              <input
+                type="radio"
+                id="six"
+                name="age"
+                class="content__invisible"
+              />
+              <span class="content__radio"></span>
+              <span class="text">6 месяцев</span>
+            </label>
+          </li>
+          <li class="content__answer-item">
+            <label for="one">
+              <input
+                type="radio"
+                id="one"
+                name="age"
+                class="content__invisible"
+              />
+              <span class="content__radio"></span>
+              <span class="text">1–1,5 года</span>
+            </label>
+          </li>
+          <li class="content__answer-item">
+            <label for="three">
+              <input
+                type="radio"
+                id="three"
+                name="age"
+                class="content__invisible"
+              />
+              <span class="content__radio"></span>
+              <span class="text">3 года</span>
+            </label>
+          </li>
+        </ul>
+      </div>
+      <div class="content__show-result">Показать результат</div>
+    </div>
   </body>
 </html>
