Добавлены кнопки, перенесен блок с вопросами из index в test.html, добавлен элемент content__text, изменены размеры блока content

--- a/coursComplited.html
+++ b/coursComplited.html
@@ -46,6 +46,11 @@
         <section class="video">Видео</section>
         <section class="content">Содержание</section>
       </div>
+      <div class="navigation">
+        <!-- Для того, чтобы сделать кнопку неактивной, нужно убрать модификатор цвета и добавить модификатор button_disabled -->
+        <button type="button" class="button button_white navigation__button" aria-label="Назад">&larr;&nbsp;&nbsp;  Назад</button>
+        <button type="button" class="button button_orange navigation__button" aria-label="Далее">Далее  &nbsp;&nbsp;&rarr;</button>
+      </div>
     </main>
   </body>
 </html>
