--- a/test.html
+++ b/test.html
@@ -46,6 +46,134 @@
         <section class="video">Видео</section>
         <section class="content">Содержание</section>
       </div>
+
+      <div class="content">
+        <div class="content__header">
+          <p class="content__title">Тест</p>
+        </div>
+
+        <!-- Блок с тест-превью -->
+        <p class="content__text">Что мы узнали об особенностях привлечения следовых расчётов на ПСР и особенностях взаимодействия между участниками ППС</p>
+        <div class="two-columns">
+          <div class="two-columns__left">
+            <div class="two-columns__icons">
+              <img src="./images/tick.png" class="two-columns__icon two-columns__row" alt="Галочка">
+              <img src="./images/repeat.png" class="two-columns__icon two-columns__row" alt="Повтор">
+              <img src="./images/hourglass.png" class="two-columns__icon" alt="Песочные часы">
+            </div>
+            <div class="two-columns__text-area">
+            <p class="content__text two-columns__row">Проходной балл:</p>
+           <p class="content__text two-columns__row">Количество попыток:</p>
+            <p class="content__text">Срок сдачи:</p>
+            </div>
+          </div>
+          <div class="two-columns__right">
+            <p class="content__text two-columns__row">80%</p>
+            <p class="content__text two-columns__row">3</p>
+            <p class="content__text">22.02.2022 г. 16:20 (GMT+3)</p>
+          </div>
+        </div>
+        <button type="button" class="button button_orange" aria-label="Начать тест">Начать тест</button>
+      </div>
+
+
+      <!-- Блок с вопросами -->
+      <div class="content">
+      <div class="content__header">
+        <p class="content__title">Тест</p>
+        <p class="content__conditions">Посмотреть условия</p>
+      </div>
+      <div class="content__question">
+        <p class="content__question-text">
+          1. В каких случаях перспективно применение следовых кинологических
+          расчётов?
+        </p>
+        <ul class="content__answer-list">
+          <li class="content__answer-item">
+            <label for="first">
+              <input type="checkbox" id="first" class="content__invisible" />
+              <span class="content__checkbox"></span>
+              <span class="content__text"
+                >Оказание помощи гражданам, оказавшимся в зонах бедствия
+                или пропавшим в безлюдной местности</span
+              >
+            </label>
+          </li>
+          <li class="content__answer-item">
+            <label for="second">
+              <input type="checkbox" id="second" class="content__invisible" />
+              <span class="content__checkbox"></span>
+              <span class="content__text"
+                >Обучение животного идти как по горячему, так и по остывшему
+                следу</span
+              >
+            </label>
+          </li>
+          <li class="content__answer-item">
+            <label for="third">
+              <input type="checkbox" id="third" class="content__invisible" />
+              <span class="content__checkbox"></span>
+              <span class="content__text"
+                >Поиск тел и их остатков с применением специально обученных
+                собак</span
+              >
+            </label>
+          </li>
+        </ul>
+      </div>
+      <div class="content__divider"></div>
+      <div class="content__question">
+        <p class="content__question-text">
+          2. С какого возраста следует начинать дрессировку по курсу ПСС?
+        </p>
+        <ul class="content__answer-list">
+          <li class="content__answer-item">
+            <label for="six">
+              <input
+                type="radio"
+                id="six"
+                name="age"
+                class="content__invisible"
+              />
+              <span class="content__radio"></span>
+              <span class="content__text">6 месяцев</span>
+            </label>
+          </li>
+          <li class="content__answer-item">
+            <label for="one">
+              <input
+                type="radio"
+                id="one"
+                name="age"
+                class="content__invisible"
+              />
+              <span class="content__radio"></span>
+              <span class="content__text">1–1,5 года</span>
+            </label>
+          </li>
+          <li class="content__answer-item">
+            <label for="three">
+              <input
+                type="radio"
+                id="three"
+                name="age"
+                class="content__invisible"
+              />
+              <span class="content__radio"></span>
+              <span class="content__text">3 года</span>
+            </label>
+          </li>
+        </ul>
+      </div>
+      <button type="submit" class="button button_disabled button_result" aria-label="Показать результаты">Показать результат</button>
+    </div>
+
+
+      <div class="navigation">
+        <!-- Для того, чтобы сделать кнопку неактивной, нужно убрать модификатор цвета и добавить модификатор button_disabled -->
+        <button type="button" class="button button_white navigation__button" aria-label="Назад">&larr;  Назад</button>
+        <button type="button" class="button button_orange navigation__button" aria-label="Далее">Далее &rarr;</button>
+      </div>
     </main>
   </body>
 </html>
