Добавить блок с видео

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Curses web-page" />
-    <title>Курсы</title>
+    <title>Видео</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
 
@@ -43,17 +43,33 @@
       <section class="breadcrumb">Хлебные крошки</section>
       <div class="wrapper">
         <!-- Обёртка для того что бы флексануть колонки-->
-        <section class="video">Видео</section>
+        <section class="container">
+          <div class="content">
+            <div class="content__header">
+              <p class="content__title">Видео</p>
+            </div>
+            <div class="content__video">
+                <video class="video"  title="" poster="./images/thumbnail.jpeg">
+                    <source src="">
+                </video>
+                <div class="video__controls" >
+                    <button class="video__button video__button_play"></button>
+                    <input class="video__range video__range_time" type="range" min="0" max="100" value="0">
+                    <button class="video__button video__button_sound"></button>
+                    <input class="video__range video__range_sound" type="range" min="0" max="100" value="30">
+                    <button class="video__button video__button_fullscreen"></button>
+                </div>
+            </div>
+        </section>
         <section class="content">Содержание</section>
       </div>
-      <div class="content">
-        
-      </div>
+
       <div class="navigation">
         <!-- Для того, чтобы сделать кнопку неактивной, нужно убрать модификатор цвета и добавить модификатор button_disabled -->
         <button type="button" class="button button_white navigation__button" aria-label="Назад">&larr;&nbsp;&nbsp;  Назад</button>
         <button type="button" class="button button_orange navigation__button" aria-label="Далее">Далее  &nbsp;&nbsp;&rarr;</button>
       </div>
     </main>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
