Изменение стилей кнопок
Теперь кнопки легче контролировать стили, стили  кнопки для теста

--- a/test.html
+++ b/test.html
@@ -329,7 +329,7 @@
         </div>
         <button
           type="button"
-          class="button button_orange"
+          class="button button_color_orange"
           aria-label="Начать тест"
         >
           Начать тест
@@ -437,10 +437,10 @@
         </div>
         <button
           type="submit"
-          class="button button_disabled button_result"
-          aria-label="Показать результаты"
+          class="button button_disabled button_result button_color_white button_status_fail"
+          aria-label="Пересдать"
         >
-          Показать результат
+          Пересдать
         </button>
       </div>
 
@@ -448,14 +448,14 @@
         <!-- Для того, чтобы сделать кнопку неактивной, нужно убрать модификатор цвета и добавить модификатор button_disabled -->
         <button
           type="button"
-          class="button button_white navigation__button"
+          class="button button_color_white navigation__button"
           aria-label="Назад"
         >
           &larr; Назад
         </button>
         <button
           type="button"
-          class="button button_orange navigation__button"
+          class="button button_color_orange navigation__button"
           aria-label="Далее"
         >
           Далее &rarr;
