--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
 
       <div class="navigation">
         <!-- Для того, чтобы сделать кнопку неактивной, нужно убрать модификатор цвета и добавить модификатор button_disabled -->
-        <button type="button" class="button button_white navigation__button" aria-label="Назад">&larr;&nbsp;&nbsp;  Назад</button>
-        <button type="button" class="button button_orange navigation__button" aria-label="Далее">Далее  &nbsp;&nbsp;&rarr;</button>
+        <button type="button" class="button button_color_white navigation__button" aria-label="Назад">&larr;&nbsp;&nbsp;  Назад</button>
+        <button type="button" class="button button_color_orange navigation__button" aria-label="Далее">Далее  &nbsp;&nbsp;&rarr;</button>
       </div>
     </main>
     <script src="./scripts/script.js"></script>
