--- a/test.html
+++ b/test.html
@@ -40,7 +40,14 @@
       </nav>
     </header>
     <main class="main">
-      <section class="breadcrumb">Хлебные крошки</section>
+      <section class="breadcrumb">
+        <ul class="breadcrumb-list">
+          <li class="breadcrumb-list__item"><a href="#" class="breadcrumb-list__link">Курсы</a></li>
+          <li class="breadcrumb-list__item"><a href="#" class="breadcrumb-list__link">Кинологическое направление</a></li>
+          <li class="breadcrumb-list__item"><a href="#" class="breadcrumb-list__link">5. Работа «второго номера» совместно со следовым кинологическим расчётом</a></li>
+          <li class="breadcrumb-list__item"><a href="#" class="breadcrumb-list__link breadcrumb-list__link_active">Тест</a></li>
+        </ul>
+      </section>
       <!-- Обёртка для того что бы флексануть колонки-->
       <div class="wrapper">
         <section class="video">Видео</section>
