--- a/test.html
+++ b/test.html
@@ -56,29 +56,30 @@
                 <img
                   class="accordion__icon"
                   src="./images/accordion_icon.svg"
+                  alt="icon"
                 />
               </div>
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
@@ -94,29 +95,30 @@
                 <img
                   class="accordion__icon"
                   src="./images/accordion_icon.svg"
+                  alt="icon"
                 />
               </div>
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
@@ -132,29 +134,30 @@
                 <img
                   class="accordion__icon accordion__icon_open"
                   src="./images/accordion_icon.svg"
+                  alt="icon"
                 />
               </div>
             </button>
             <div class="accordion__body accordion__body_open">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
@@ -170,13 +173,14 @@
                 <img
                   class="accordion__icon accordion__icon_open"
                   src="./images/accordion_icon.svg"
+                  alt="icon"
                 />
               </div>
             </button>
             <div class="accordion__body accordion__body_open">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Вебинар</p>
                 </li>
               </ul>
@@ -192,31 +196,32 @@
                 <img
                   class="accordion__icon accordion__icon_open"
                   src="./images/accordion_icon.svg"
+                  alt="icon"
                 />
               </div>
             </button>
             <div class="accordion__body accordion__body_open">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">
                     Дрессировка поисково-спасательных собак
                   </p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon"/>
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item accordion__item_active">
-                  <img class="menu__icon" src="./images/test-icon-active.svg" />
+                  <img class="menu__icon" src="./images/test-icon-active.svg" alt="icon"/>
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
@@ -232,25 +237,26 @@
                 <img
                   class="accordion__icon"
                   src="./images/accordion_icon.svg"
+                  alt="icon"
                 />
               </div>
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/lesson-icon.svg" />
+                  <img class="menu__icon" src="./images/lesson-icon.svg" alt="icon"/>
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/webinar-icon.svg" />
+                  <img class="menu__icon" src="./images/webinar-icon.svg" alt="icon"/>
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/video-icon.svg" />
+                  <img class="menu__icon" src="./images/video-icon.svg" alt="icon"/>
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/test-icon.svg" />
+                  <img class="menu__icon" src="./images/test-icon.svg" alt="icon"/>
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
@@ -267,17 +273,18 @@
                 <img
                   class="accordion__icon"
                   src="./images/accordion_icon.svg"
+                  alt="icon"
                 />
               </div>
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/webinar-icon.svg" />
+                  <img class="menu__icon" src="./images/webinar-icon.svg" alt="icon"/>
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/test-icon.svg" />
+                  <img class="menu__icon" src="./images/test-icon.svg" alt="icon"/>
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
