--- a/test.html
+++ b/test.html
@@ -54,7 +54,7 @@
         <section class="aside">
           <h2 class="aside__title">Содержание</h2>
           <div class="accordion">
-            <button class="accordion__button">
+            <button class="accordion__button" type="button" aria-label="Открыть">
               <h3 class="accordion__title">
                 1. В каких случаях перспективно применение следовых
                 кинологических расчётов
@@ -63,36 +63,37 @@
                 <img
                   class="accordion__icon"
                   src="./images/accordion_icon.svg"
-                />
+                  alt="icon"
+                >
               </div>
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
             </div>
           </div>
           <div class="accordion">
-            <button class="accordion__button">
+            <button class="accordion__button" type="button" aria-label="Открыть">
               <h3 class="accordion__title">
                 2. Необходимые обеспечительные меры для успешного применения
                 следовых (розыскных собак)
@@ -101,36 +102,37 @@
                 <img
                   class="accordion__icon"
                   src="./images/accordion_icon.svg"
-                />
+                  alt="icon"
+                >
               </div>
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
             </div>
           </div>
           <div class="accordion">
-            <button class="accordion__button">
+            <button class="accordion__button" type="button" aria-label="Открыть">
               <h3 class="accordion__title">
                 3. Особенности привлечения следовых расчётов
                 на ПСР и особенности взаимодействия
@@ -139,36 +141,37 @@
                 <img
                   class="accordion__icon accordion__icon_open"
                   src="./images/accordion_icon.svg"
-                />
+                  alt="icon"
+                >
               </div>
             </button>
             <div class="accordion__body accordion__body_open">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
             </div>
           </div>
           <div class="accordion">
-            <button class="accordion__button">
+            <button class="accordion__button" type="button" aria-label="Открыть">
               <h3 class="accordion__title">
                 4. Корректная постановка задачи кинологу и особенности
                 её исполнения
@@ -177,20 +180,21 @@
                 <img
                   class="accordion__icon accordion__icon_open"
                   src="./images/accordion_icon.svg"
-                />
+                  alt="icon"
+                >
               </div>
             </button>
             <div class="accordion__body accordion__body_open">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Вебинар</p>
                 </li>
               </ul>
             </div>
           </div>
           <div class="accordion">
-            <button class="accordion__button">
+            <button class="accordion__button" type="button" aria-label="Открыть">
               <h3 class="accordion__title">
                 5. Работа «второго номера» совместно со следовым кинологическим
                 расчётом
@@ -199,38 +203,39 @@
                 <img
                   class="accordion__icon accordion__icon_open"
                   src="./images/accordion_icon.svg"
-                />
+                  alt="icon"
+                >
               </div>
             </button>
             <div class="accordion__body accordion__body_open">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">
                     Дрессировка поисково-спасательных собак
                   </p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" />
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item accordion__item_active">
-                  <img class="menu__icon" src="./images/test-icon-active.svg" />
+                  <img class="menu__icon" src="./images/test-icon-active.svg" alt="icon">
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
             </div>
           </div>
           <div class="accordion">
-            <button class="accordion__button">
+            <button class="accordion__button" type="button" aria-label="Открыть">
               <h3 class="accordion__title">
                 6. Оценка качества и особенности анализа результата проделанной
                 следовым кинологическим расчётом работы
@@ -239,32 +244,33 @@
                 <img
                   class="accordion__icon"
                   src="./images/accordion_icon.svg"
-                />
+                  alt="icon"
+                >
               </div>
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/lesson-icon.svg" />
+                  <img class="menu__icon" src="./images/lesson-icon.svg" alt="icon">
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/webinar-icon.svg" />
+                  <img class="menu__icon" src="./images/webinar-icon.svg" alt="icon">
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/video-icon.svg" />
+                  <img class="menu__icon" src="./images/video-icon.svg" alt="icon">
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/test-icon.svg" />
+                  <img class="menu__icon" src="./images/test-icon.svg" alt="icon">
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
             </div>
           </div>
           <div class="accordion">
-            <button class="accordion__button">
+            <button class="accordion__button" type="button" aria-label="Открыть">
               <h3 class="accordion__title">
                 7. Особенности и пределы использования РПРС ом полученной в ходе
                 применения специальной следовой собаки информации в целях
@@ -274,17 +280,18 @@
                 <img
                   class="accordion__icon"
                   src="./images/accordion_icon.svg"
-                />
+                  alt="icon"
+                >
               </div>
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/webinar-icon.svg" />
+                  <img class="menu__icon" src="./images/webinar-icon.svg" alt="icon">
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/test-icon.svg" />
+                  <img class="menu__icon" src="./images/test-icon.svg" alt="icon">
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
