Revert "Bugfix/aside"

--- a/test.html
+++ b/test.html
@@ -40,21 +40,14 @@
       </nav>
     </header>
     <main class="main">
-      <section class="breadcrumb">
-        <ul class="breadcrumb-list">
-          <li class="breadcrumb-list__item"><a href="#" class="breadcrumb-list__link">Курсы</a></li>
-          <li class="breadcrumb-list__item"><a href="#" class="breadcrumb-list__link">Кинологическое направление</a></li>
-          <li class="breadcrumb-list__item"><a href="#" class="breadcrumb-list__link">5. Работа «второго номера» совместно со следовым кинологическим расчётом</a></li>
-          <li class="breadcrumb-list__item"><a href="#" class="breadcrumb-list__link breadcrumb-list__link_active">Тест</a></li>
-        </ul>
-      </section>
+      <section class="breadcrumb">Хлебные крошки</section>
       <!-- Обёртка для того что бы флексануть колонки-->
       <div class="wrapper">
         <section class="video">Видео</section>
         <section class="aside">
           <h2 class="aside__title">Содержание</h2>
           <div class="accordion">
-            <button class="accordion__button" type="button" aria-label="Открыть">
+            <button class="accordion__button">
               <h3 class="accordion__title">
                 1. В каких случаях перспективно применение следовых
                 кинологических расчётов
@@ -63,37 +56,36 @@
                 <img
                   class="accordion__icon"
                   src="./images/accordion_icon.svg"
-                  alt="icon"
-                >
+                />
               </div>
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
             </div>
           </div>
           <div class="accordion">
-            <button class="accordion__button" type="button" aria-label="Открыть">
+            <button class="accordion__button">
               <h3 class="accordion__title">
                 2. Необходимые обеспечительные меры для успешного применения
                 следовых (розыскных собак)
@@ -102,37 +94,36 @@
                 <img
                   class="accordion__icon"
                   src="./images/accordion_icon.svg"
-                  alt="icon"
-                >
+                />
               </div>
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
             </div>
           </div>
           <div class="accordion">
-            <button class="accordion__button" type="button" aria-label="Открыть">
+            <button class="accordion__button">
               <h3 class="accordion__title">
                 3. Особенности привлечения следовых расчётов
                 на ПСР и особенности взаимодействия
@@ -141,37 +132,36 @@
                 <img
                   class="accordion__icon accordion__icon_open"
                   src="./images/accordion_icon.svg"
-                  alt="icon"
-                >
+                />
               </div>
             </button>
             <div class="accordion__body accordion__body_open">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
             </div>
           </div>
           <div class="accordion">
-            <button class="accordion__button" type="button" aria-label="Открыть">
+            <button class="accordion__button">
               <h3 class="accordion__title">
                 4. Корректная постановка задачи кинологу и особенности
                 её исполнения
@@ -180,21 +170,20 @@
                 <img
                   class="accordion__icon accordion__icon_open"
                   src="./images/accordion_icon.svg"
-                  alt="icon"
-                >
+                />
               </div>
             </button>
             <div class="accordion__body accordion__body_open">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Вебинар</p>
                 </li>
               </ul>
             </div>
           </div>
           <div class="accordion">
-            <button class="accordion__button" type="button" aria-label="Открыть">
+            <button class="accordion__button">
               <h3 class="accordion__title">
                 5. Работа «второго номера» совместно со следовым кинологическим
                 расчётом
@@ -203,39 +192,38 @@
                 <img
                   class="accordion__icon accordion__icon_open"
                   src="./images/accordion_icon.svg"
-                  alt="icon"
-                >
+                />
               </div>
             </button>
             <div class="accordion__body accordion__body_open">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">
                     Дрессировка поисково-спасательных собак
                   </p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/success_icon.svg" />
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item accordion__item_active">
-                  <img class="menu__icon" src="./images/test-icon-active.svg" alt="icon">
+                  <img class="menu__icon" src="./images/test-icon-active.svg" />
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
             </div>
           </div>
           <div class="accordion">
-            <button class="accordion__button" type="button" aria-label="Открыть">
+            <button class="accordion__button">
               <h3 class="accordion__title">
                 6. Оценка качества и особенности анализа результата проделанной
                 следовым кинологическим расчётом работы
@@ -244,33 +232,32 @@
                 <img
                   class="accordion__icon"
                   src="./images/accordion_icon.svg"
-                  alt="icon"
-                >
+                />
               </div>
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/lesson-icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/lesson-icon.svg" />
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/webinar-icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/webinar-icon.svg" />
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/video-icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/video-icon.svg" />
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/test-icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/test-icon.svg" />
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
             </div>
           </div>
           <div class="accordion">
-            <button class="accordion__button" type="button" aria-label="Открыть">
+            <button class="accordion__button">
               <h3 class="accordion__title">
                 7. Особенности и пределы использования РПРС ом полученной в ходе
                 применения специальной следовой собаки информации в целях
@@ -280,18 +267,17 @@
                 <img
                   class="accordion__icon"
                   src="./images/accordion_icon.svg"
-                  alt="icon"
-                >
+                />
               </div>
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/webinar-icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/webinar-icon.svg" />
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/test-icon.svg" alt="icon">
+                  <img class="menu__icon" src="./images/test-icon.svg" />
                   <p class="accordion__text">Тест</p>
                 </li>
               </ul>
