размеры content__result
добавлены паддинги, реализована разная высота блока с результатом при статусе fail и succes, выровнен текст

--- a/test.html
+++ b/test.html
@@ -168,7 +168,7 @@
                 Отличный результат!
               </p>
               <p class="content__result-text">
-                Нажмите «Далее», чтобы продолжить.
+                Нажмите «Далее», чтобы продолжить.<br>
                 Если считаете, что можете лучше, нажмите «Пересдать». В случае если результат будет хуже, засчитается
                 наивысший результат.
               </p>
