padding bottom add

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
               <input class="video__range video__range_sound" type="range" min="0" max="100" value="30">
               <button class="video__button video__button_fullscreen"></button>
             </div>
+          </div>
+        </div>
 
         <div class="navigation">
           <!-- Для того, чтобы сделать кнопку неактивной, нужно убрать модификатор цвета и добавить модификатор button_disabled -->
