--- a/index.html
+++ b/index.html
@@ -52,23 +52,21 @@
             <div class="video__controls">
               <button id="play" class="video__button">
                 <svg class="video__icon">
-                  <use href="#play-icon"></use>
-                  <use class="video__icon_hidden" href="#pause"></use>
+                  <use href="#play-icon"><symbol id="play-icon" viewBox="0 0 24 24">
+                    <path d="M8.016 5.016l10.969 6.984-10.969 6.984v-13.969z"></path>
+                  </symbol></use>
+                  <use class="video__icon_hidden" href="#pause"><symbol id="pause" viewBox="0 0 24 24">
+                    <path d="M14.016 5.016h3.984v13.969h-3.984v-13.969zM6 18.984v-13.969h3.984v13.969h-3.984z"></path>
+                  </symbol></use>
                 </svg>
               </button>
-              <svg style="display: none">
-                <symbol id="pause" viewBox="0 0 24 24">
-                  <path d="M14.016 5.016h3.984v13.969h-3.984v-13.969zM6 18.984v-13.969h3.984v13.969h-3.984z"></path>
-                </symbol>
-                <symbol id="play-icon" viewBox="0 0 24 24">
-                  <path d="M8.016 5.016l10.969 6.984-10.969 6.984v-13.969z"></path>
-                </symbol>
-              </svg>
               <input class="video__range video__range_time" type="range" min="0" max="100" value="0">
               <button class="video__button video__button_sound"></button>
               <input class="video__range video__range_sound" type="range" min="0" max="100" value="30">
               <button class="video__button video__button_fullscreen"></button>
             </div>
+          </div>
+          </div>
 
         <div class="navigation">
           <!-- Для того, чтобы сделать кнопку неактивной, нужно убрать модификатор цвета и добавить модификатор button_disabled -->
